--- a/src/site/notes/🥇知识管理.md
+++ b/src/site/notes/🥇知识管理.md
@@ -1,19 +1,18 @@
 ---
-{"dg-publish":true,"permalink":"/🥇知识管理/","title":"知识管理","tags":["🏷"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/🥇知识管理/","title":"知识管理","tags":["🏷"]}
 ---
 
 
-# # [[🥇知识管理\|🥇知识管理]]
+## [[🥇知识管理\|🥇知识管理]]
 
 ---
-
 > [!info] 知识管理的方法论更新列表
-| File                                                    | 更新日期            | 归属                   | 类型      | 状态 |
-| ------------------------------------------------------- | --------------- | -------------------- | ------- | -- |
-| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | 2023-03-31 2319 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | 2023-03-31 2319 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[P.A.R.A.\|P.A.R.A.]]                               | 2023-03-31 2309 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[Evergreen Note\|Evergreen Note]]                   | 2023-03-31 2309 | <ul><li>📥</li></ul> | article | 🟢 |
+| File                                                    | 类型      | 状态 |
+| ------------------------------------------------------- | ------- | -- |
+| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | article | 🟢 |
+| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | article | 🟢 |
+| [[P.A.R.A.\|P.A.R.A.]]                               | article | 🟢 |
+| [[Evergreen Note\|Evergreen Note]]                   | article | 🟢 |
 
 
 
