--- a/src/site/notes/布鲁姆提出教育目标分类理论.md
+++ b/src/site/notes/布鲁姆提出教育目标分类理论.md
@@ -1,9 +1,6 @@
 ---
-{"dg-publish":true,"permalink":"/布鲁姆提出教育目标分类理论/","title":"布鲁姆提出教育目标分类理论","tags":["📥"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/布鲁姆提出教育目标分类理论/","title":"布鲁姆提出教育目标分类理论","tags":["📥"]}
 ---
-
-
-# [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]
 
 ---
 1.  记忆：对具体事实、概念、术语的回忆；
