--- a/src/site/notes/🥇知识管理.md
+++ b/src/site/notes/🥇知识管理.md
@@ -3,7 +3,7 @@
 ---
 
 ---
-> [!info] 知识管理的方法论更新列表
+> [!abstract]  知识管理的方法论更新列表
 | File                                                    | 类型      | 状态 |
 | ------------------------------------------------------- | ------- | -- |
 | [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | article | 🟢 |
