--- a/src/site/notes/🥇知识管理.md
+++ b/src/site/notes/🥇知识管理.md
@@ -3,17 +3,18 @@
 ---
 
 ---
-| File                                                    | 类型      | 状态 |
-| ------------------------------------------------------- | ------- | -- |
-| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | article | 🟢 |
-| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | article | 🟢 |
-| [[P.A.R.A.\|P.A.R.A.]]                               | article | 🟢 |
-| [[Evergreen Note\|Evergreen Note]]                   | article | 🟢 |
+| File                                                    | 更新日期            | 归属                   | 类型      | 状态 |
+| ------------------------------------------------------- | --------------- | -------------------- | ------- | -- |
+| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | 2023-03-31 2341 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | 2023-03-31 2341 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[P.A.R.A.\|P.A.R.A.]]                               | 2023-04-01 2341 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[Evergreen Note\|Evergreen Note]]                   | 2023-04-01 0009 | <ul><li>📥</li></ul> | article | 🟢 |
 
 ---
 - 标签: 
 	- 
 - 参考资料:
 	- 
-- 相关主题:
-	- 
+- 上一页
+	- 【[[🌿One\|🌿One]]】
+
