--- a/src/site/notes/🥇知识管理.md
+++ b/src/site/notes/🥇知识管理.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/🥇知识管理/","title":"知识管理","tags":["🏷"]}
+{"dg-publish":true,"permalink":"/🥇知识管理/","title":"🥇知识管理","tags":["🏷"],"noteIcon":""}
 ---
 
 ---
