--- a/src/site/notes/🥇知识管理.md
+++ b/src/site/notes/🥇知识管理.md
@@ -1,14 +1,14 @@
 ---
-{"dg-publish":true,"permalink":"/🥇知识管理/","title":"🥇知识管理","tags":["🏷"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/🥇知识管理/","title":"🥇知识管理","tags":["🏷"]}
 ---
 
 ---
-| File                                                    | 更新日期            | 归属                   | 类型      | 状态 |
-| ------------------------------------------------------- | --------------- | -------------------- | ------- | -- |
-| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | 2023-03-31 2341 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | 2023-03-31 2341 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[P.A.R.A.\|P.A.R.A.]]                               | 2023-04-01 2341 | <ul><li>📥</li></ul> | article | 🟢 |
-| [[Evergreen Note\|Evergreen Note]]                   | 2023-04-01 0009 | <ul><li>📥</li></ul> | article | 🟢 |
+| File                                                    | 创建日期            | 更新日期            | 归属                   | 类型      | 状态 |
+| ------------------------------------------------------- | --------------- | --------------- | -------------------- | ------- | -- |
+| [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | 2023-03-31 2254 | 2023-04-01 0929 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | 2023-03-31 1733 | 2023-04-01 0827 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[P.A.R.A.\|P.A.R.A.]]                               | 2023-03-31 1747 | 2023-04-01 2341 | <ul><li>📥</li></ul> | article | 🟢 |
+| [[Evergreen Note\|Evergreen Note]]                   | 2023-03-31 1806 | 2023-04-01 0009 | <ul><li>📥</li></ul> | article | 🟢 |
 
 ---
 - 标签: 
