--- a/src/site/notes/🦦兴趣.md
+++ b/src/site/notes/🦦兴趣.md
@@ -4,14 +4,12 @@
 
 ---
 
-| File                                                                    | 创建日期            | 更新日期            | 归属                   | 类型    | 状态 |
-| ----------------------------------------------------------------------- | --------------- | --------------- | -------------------- | ----- | -- |
-| [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]                                       | 2023-04-02 2028 | 2023-04-02 2030 | <ul><li>📥</li></ul> | video | 🟡 |
-| [[断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？\|断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？]] | 2023-04-02 1959 | 2023-04-02 2029 | <ul><li>📥</li></ul> | video | 🟡 |
-| [[清理肝脏的7种食物\|清理肝脏的7种食物]]                                             | 2023-04-02 1950 | 2023-04-02 2058 | <ul><li>📥</li></ul> | video | 🟢 |
-| [[脂肪肝逆转的方法\|脂肪肝逆转的方法]]                                               | 2023-04-01 0944 | 2023-04-02 1937 | <ul><li>📥</li></ul> | video | 🟢 |
-| [[快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法\|快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法]]                         | 2023-04-01 1646 | 2023-04-02 1934 | <ul><li>📥</li></ul> | video | 🟢 |
-| [[失眠的5个技巧\|失眠的5个技巧]]                                                 | 2023-04-01 2327 | 2023-04-02 1935 | <ul><li>📥</li></ul> | video | 🟢 |
+- [[脂肪肝逆转的方法\|脂肪肝逆转的方法]]: **状态：**🟢**更新：**2023-04-03 1033
+- [[清理肝脏的7种食物\|清理肝脏的7种食物]]: **状态：**🟢**更新：**2023-04-02 2058
+- [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]: **状态：**🟡**更新：**2023-04-02 2030
+- [[断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？\|断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？]]: **状态：**🟡**更新：**2023-04-02 2029
+- [[快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法\|快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法]]: **状态：**🟢**更新：**2023-04-02 1934
+- [[失眠的5个技巧\|失眠的5个技巧]]: **状态：**🟢**更新：**2023-04-02 1935
 
 ---
 
