--- a/src/site/notes/🦦兴趣.md
+++ b/src/site/notes/🦦兴趣.md
@@ -4,12 +4,12 @@
 
 ---
 
-- [[脂肪肝逆转的方法\|脂肪肝逆转的方法]]: **状态：**🟢**更新：**2023-04-03 1033
-- [[清理肝脏的7种食物\|清理肝脏的7种食物]]: **状态：**🟢**更新：**2023-04-02 2058
-- [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]: **状态：**🟡**更新：**2023-04-02 2030
-- [[断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？\|断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？]]: **状态：**🟡**更新：**2023-04-02 2029
-- [[快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法\|快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法]]: **状态：**🟢**更新：**2023-04-02 1934
-- [[失眠的5个技巧\|失眠的5个技巧]]: **状态：**🟢**更新：**2023-04-02 1935
+- [[脂肪肝逆转的方法\|脂肪肝逆转的方法]]: 状态：🟢更新：2023-04-03 1033
+- [[清理肝脏的7种食物\|清理肝脏的7种食物]]: 状态：🟢更新：2023-04-02 2058
+- [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]: 状态：🟡更新：2023-04-02 2030
+- [[断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？\|断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？]]: 状态：🟡更新：2023-04-02 2029
+- [[快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法\|快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法]]: 状态：🟢更新：2023-04-02 1934
+- [[失眠的5个技巧\|失眠的5个技巧]]: 状态：🟢更新：2023-04-02 1935
 
 ---
 
