--- a/src/site/notes/🥇方法.md
+++ b/src/site/notes/🥇方法.md
@@ -6,6 +6,7 @@
 | File                                                    | 创建日期            | 更新日期            | 归属                   | 类型      | 状态                   |
 | ------------------------------------------------------- | --------------- | --------------- | -------------------- | ------- | -------------------- |
 | [[布鲁姆提出教育目标分类理论\|布鲁姆提出教育目标分类理论]]                     | 2023-04-03 1416 | 2023-04-03 1421 | <ul><li>📥</li></ul> | article | <ul><li>🟢</li></ul> |
+| [[如何阅读一本书\|如何阅读一本书]]                                 | 2023-04-03 2238 | 2023-04-03 2238 | <ul><li>📥</li></ul> | book    | 🟡                   |
 | [[向大厨学习终极原则：Mise en place\|向大厨学习终极原则：Mise en place]] | 2023-03-31 1733 | 2023-04-01 2028 | <ul><li>📥</li></ul> | article | 🟢                   |
 | [[P.A.R.A.\|P.A.R.A.]]                               | 2023-03-31 1747 | 2023-04-02 1901 | <ul><li>📥</li></ul> | article | 🟢                   |
 | [[Evergreen Note\|Evergreen Note]]                   | 2023-03-31 1806 | 2023-04-02 1901 | <ul><li>📥</li></ul> | article | 🟢                   |
