--- a/src/site/notes/🦦兴趣.md
+++ b/src/site/notes/🦦兴趣.md
@@ -4,15 +4,18 @@
 
 ---
 
+- [[双均线交易系统\|双均线交易系统]]: 状态：🟡更新：2023-04-11 1824
+- [[123法则和2b法则\|123法则和2b法则]]: 状态：🟡更新：2023-04-11 1716
+- [[拉瑞威廉姆斯短线交易秘籍\|拉瑞威廉姆斯短线交易秘籍]]: 状态：🟡更新：2023-04-11 1718
 - [[钾含量高的食物\|钾含量高的食物]]: 状态：🟡更新：2023-04-04 1753
 - [[脂肪肝逆转的方法\|脂肪肝逆转的方法]]: 状态：🟢更新：2023-04-04 1112
 - [[清理肝脏的7种食物\|清理肝脏的7种食物]]: 状态：🟢更新：2023-04-02 2058
-- [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]: 状态：🟡更新：2023-04-02 2030
+- [[断食完整重点，补充营养品\|断食完整重点，补充营养品]]: 状态：🟡更新：2023-04-07 1720
 - [[断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？\|断食多久？刺激生长激素，自噬，消炎，癌细胞，干细胞，血糖变化？]]: 状态：🟡更新：2023-04-02 2029
 - [[快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法\|快速瘦肚子,燃烧腹部脂肪,瘦肚子3方法]]: 状态：🟢更新：2023-04-02 1934
 - [[失眠的5个技巧\|失眠的5个技巧]]: 状态：🟢更新：2023-04-02 1935
-- [[卤猪肝过程\|卤猪肝过程]]: 状态：🟢更新：2023-04-07 0026
-- [[CIS股票交易制胜逻辑\|CIS股票交易制胜逻辑]]: 状态：🟢更新：2023-04-06 1952
+- [[卤猪肝过程\|卤猪肝过程]]: 状态：🟢更新：2023-04-10 1804
+- [[CIS股票交易制胜逻辑\|CIS股票交易制胜逻辑]]: 状态：🟢更新：2023-04-08 2332
 
 ---
 
