Update content src/site/notes/最快燃烧脂肪4.5倍？运动，柏格医生示范运动(Dr Berg).md

--- a/src/site/notes/最快燃烧脂肪4.5倍？运动，柏格医生示范运动(Dr Berg).md
+++ b/src/site/notes/最快燃烧脂肪4.5倍？运动，柏格医生示范运动(Dr Berg).md
@@ -3,6 +3,7 @@
 ---
 
 
+
 高强度间歇式运动：做30秒高强度运动，休息3分钟，重复多做几次。
 
 运动之前要保证前一晚睡眠充足，有体力了。刚开始可以从走路开始
@@ -11,8 +12,7 @@
 
 对心血管和血糖都很好。
 
-
-
+<iframe width="800" height="600" src="https://www.youtube.com/embed/NtSfWUbVguw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 ---
 
 - 标签: 
